--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 body{
     width: 100vw;
     height: 100vh;
+    background-color: #222f3e;
 }
 main{
     width: 100%;
@@ -17,26 +18,71 @@ main{
     display: flex;
     justify-content: center;
 }
+#numberCurrency{
+    border-radius: 5px;
+    border: 1px solid #ff1818;
+    background-color: transparent;
+    padding: 0 1.2em;
+    height: 25px;
+    width: 30%;
+    color: #fff;
+}
+#numberCurrency:focus{
+    outline: none;
+}
+#currencyCountry{
+    border-radius: 5px;
+    border: 1px solid #ff1818;
+    background-color: transparent;
+    padding: 0 1.2em;
+    height: 25px;
+  
+    color: #fff;
+}
+button[type="submit"]{
+    background-color: #ff1818;
+    padding: 0 1.2em;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    height: 25px;
+    cursor: pointer;
+}
+button[type="submit"]:hover{
+    background-color: #f83030;
+}
 #divisas_country{
-   margin-top: 10%;
+   margin-top: 5%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 10px;
    
 }
+.text{
+    font-size: 0.9rem;
+    color: #fff;
+}
 .card{
     width: 120px;
     height: 120px;
-    -webkit-box-shadow: 0px 0px 7px 0px rgba(66, 68, 90, 1);
-    -moz-box-shadow: 0px 0px 7px 0px rgba(66, 68, 90, 1);
-    box-shadow: 0px 0px 7px 0px rgba(66, 68, 90, 1);
+    -webkit-box-shadow: 0px 0px 7px 0px rgba(218, 218, 218, 0.6);
+    -moz-box-shadow: 0px 0px 7px 0px rgba(218, 218, 218, 0.6);;
+    box-shadow: 0px 0px 7px 0px rgba(218, 218, 218, 0.6);;
     border-radius: 10px;
     margin: 2% 2%;
     display: none;
     justify-content: center;
     align-items: center;
     padding: 5px;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
 }
+
+.card.fade-out {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
 .fi{
     height: 50px;
     width: 50px;
